# paint

./: .gitignore  Makefile  Makefile.am  README.md  bootstrap.sh  configure.ac  paint.c
src/: Makefile.am  paint.c
